--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     </head>
 <body>
+  <header class="bg-dark text-light text-center py-5">
+    <h1>HomePage</h1>
+  </header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">Your Logo</a>
@@ -25,15 +28,16 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="api.html">Api</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="login">Login</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+  <div class="wrapper">
     <div id="container">
         <h1>Welcome back</h1>
     </div>
@@ -41,9 +45,20 @@
         <p id="clock"></p>
         <h1>Dont try this at home</h1>
     </div>
-
+    
+    <h2> The Cat Café Atmosphere: </h2> <p>  
+        
+      Walking into a cat café is like entering a tranquil oasis, carefully designed to create a serene and comfortable environment for both cats and visitors. Soft music plays in the background as you sink into a cozy chair, sipping on your favorite latte or tea. The scent of freshly brewed coffee mingles with the gentle purring of contented cats, instantly putting you at ease.
+    </p>
 
 </body>
+
+  </div>
+  <footer class="bg-dark text-center text-light py-3">
+    <p>&copy; 2023 Moberly. All rights reserved.</p>
+  </footer>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="script.js"></script>
 </html>
