--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Your Logo</a>
+      <a class="navbar-brand" href="#">
+        <img class="navbar-logo" src="logoCat.png" alt="Logo">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
