--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
 
 
-    </head>
+  </head>
 <body>
-  <header class="bg-dark text-light text-center py-5">
-    <h1>HomePage</h1>
+  <header class="bg-dark text-light text-center py-2">
+    <h2>HomePage</h2>
   </header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
@@ -39,6 +39,7 @@
       </div>
     </div>
   </nav>
+  
   <div class="wrapper">
     <div id="container">
         <h1>Welcome back</h1>
@@ -47,12 +48,12 @@
         <p id="clock"></p>
         <h1>Dont try this at home</h1>
     </div>
-    
+    <div class="flex-container">
     <h2> The Cat Café Atmosphere: </h2> <p>  
         
       Walking into a cat café is like entering a tranquil oasis, carefully designed to create a serene and comfortable environment for both cats and visitors. Soft music plays in the background as you sink into a cozy chair, sipping on your favorite latte or tea. The scent of freshly brewed coffee mingles with the gentle purring of contented cats, instantly putting you at ease.
     </p>
-
+    </div>
 </body>
 
   </div>
