--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
-  <title>About Page</title>
+  <title>About Page - WiXi</title>
 </head>
 <body>
-  <header class="bg-dark text-light text-center py-5">
-    <h1>About Us</h1>
+  <header class="bg-dark text-light text-center py-2">
+    <h2>About Us</h2>
   </header>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
