--- a/api.html
+++ b/api.html
@@ -46,6 +46,7 @@
 		<p class="desc">on this web you can see how we summon cat from parallel universe</p>
 	</div>	
   <div>
+    <div class="flex-container">
     <h1>Try for free</h1>
     <h3>Click on the button to see image</h3>
     <img id="image" src="" />
@@ -53,7 +54,7 @@
 <button type="button" onclick="show()" id="btnID">
     Show Image
 </button>
-
+</div>
 </body>
 
   </div>
