--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <h1>Dont try this at home</h1>
     </div>
     <div class="flex-container">
-    <h2> The Cat Café Atmosphere: </h2> <p>  
-        
+    <h2> The Cat Café Atmosphere: </h2> 
+    <p>  
       Walking into a cat café is like entering a tranquil oasis, carefully designed to create a serene and comfortable environment for both cats and visitors. Soft music plays in the background as you sink into a cozy chair, sipping on your favorite latte or tea. The scent of freshly brewed coffee mingles with the gentle purring of contented cats, instantly putting you at ease.
     </p>
     </div>
