--- a/api.html
+++ b/api.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="apiScript.js"></script>
     
 
     </head>
@@ -40,11 +41,12 @@
       </div>
     </div>
   </nav>
-  <div class="flex-container">
-  <button id="close" class="btnClass">close</button>
-		<button id="open">open</button>
-		<p class="desc">on this web you can see how we summon cat from parallel universe</p>
-	</div>	
+  <main class="container my-3">	
+  <p>on this web you can see how we summon cat from parallel universe</p>
+
+  <button id="hide">Hide</button>
+  <button id="show">Show</button>
+
   <div>
     <div class="flex-container">
     <h1>Try for free</h1>
@@ -55,6 +57,7 @@
     Show Image
 </button>
 </div>
+</main>
 </body>
 
   </div>
@@ -63,5 +66,4 @@
   </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="script.js"></script>
 </html>
