--- a/api.html
+++ b/api.html
@@ -42,7 +42,8 @@
     </div>
   </nav>
   <main class="container my-3">	
-  <p>on this web you can see how we summon cat from parallel universe</p>
+
+  <p id="descr">on this web you can see how we summon cat from parallel universe</p>
 
   <button id="hide">Hide</button>
   <button id="show">Show</button>
@@ -57,6 +58,10 @@
     Show Image
 </button>
 </div>
+
+<button id="animation">Start Animation</button>
+<div id="divAnimate" style="background:#98bf21;height:100px;width:100px;"></div>
+
 </main>
 </body>
 
