--- a/api.html
+++ b/api.html
@@ -48,20 +48,19 @@
   <button id="hide">Hide</button>
   <button id="show">Show</button>
 
+  <div id="vote-options" class="vote-options">
+    <button onClick="vote(1)">Vote Up </button>
+    <button onClick="vote(-1)">Vote Down </button>
+      
   <div>
-    <div class="flex-container">
-    <h1>Try for free</h1>
-    <h3>Click on the button to see image</h3>
-    <img id="image" src="" />
- </div>
-<button type="button" onclick="show()" id="btnID">
-    Show Image
-</button>
-</div>
+    <img id="image-to-vote-on" class="col-lg"></img>
+    </div>
+    
+    </div>
+  
 
 <button id="animation">Start Animation</button>
 <div id="divAnimate" style="background:#98bf21;height:100px;width:100px;"></div>
-
 </main>
 </body>
 
