--- a/logoPage.html
+++ b/logoPage.html
@@ -11,11 +11,11 @@
   </head>
 <body>
   <header class="bg-dark text-light text-center py-2">
-    <h2>HomePage</h2>
+    <h2>Logo</h2>
   </header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="logoPage.html">
+      <a class="navbar-brand" href="#">
         <img class="navbar-logo" src="logoCat.png" alt="Logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="index">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
@@ -33,29 +33,14 @@
             <a class="nav-link" href="api.html">Api</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login">Login</a>
+            <a class="nav-link disabled" href="login">Login</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
   
-  <div class="wrapper">
-    <div id="container">
-        <h1>Welcome back</h1>
-    </div>
-    <div id="clockContainer">
-        <p id="clock"></p>
-        <h1>Dont try this at home</h1>
-    </div>
-    <div class="flex-container  my-1">
-    <h2> The Cat Café Atmosphere: </h2> 
-    </div>
-    <div class="flex-container  my-1"><p>  
-      Walking into a cat café is like entering a tranquil oasis, carefully designed to create a serene and comfortable environment for both cats and visitors. Soft music plays in the background as you sink into a cozy chair, sipping on your favorite latte or tea. The scent of freshly brewed coffee mingles with the gentle purring of contented cats, instantly putting you at ease.
-    </p>
-    </div>
-    </div>
+ 
 </body>
 
   </div>
