--- a/api.html
+++ b/api.html
@@ -48,16 +48,9 @@
   <button id="hide">Hide</button>
   <button id="show">Show</button>
 
-  <div id="vote-options" class="vote-options">
-    <button onClick="vote(1)">Vote Up </button>
-    <button onClick="vote(-1)">Vote Down </button>
-      
-    <div>
-    <img id="image-to-vote-on" class="col-lg"></img>
-    </div>
-    
-  </div>
-  
+  <h1>Random Cat Images</h1>
+    <div id="catImages"></div>
+    <button id="changeImageButton">Change Image</button>
 
   <button id="animation">Start Animation</button>
   <div id="divAnimate" style="background:#98bf21;height:100px;width:100px;"></div>
