--- a/logoPage.html
+++ b/logoPage.html
@@ -42,7 +42,9 @@
   
  
 </body>
-
+  
+  <button id="animation">Start Animation</button>
+  <div id="divAnimate" style="background:#98bf21;height:100px;width:100px;"></div>
   </div>
   <footer class="bg-dark text-center text-light py-3">
     <p>&copy; 2023 Moberly. All rights reserved.</p>
