--- a/api.html
+++ b/api.html
@@ -17,7 +17,7 @@
   </header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="logoPage.html">
         <img class="navbar-logo" src="logoCat.png" alt="Logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +35,7 @@
             <a class="nav-link  active" aria-current="page" href="#">Api</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login">Login</a>
+            <a class="nav-link disabled" href="login">Login</a>
           </li>
         </ul>
       </div>
@@ -49,11 +49,18 @@
   <button id="show">Show</button>
 
   <h1>Random Cat Images</h1>
+
     <div id="catImages"></div>
     <button id="changeImageButton">Change Image</button>
 
-  <button id="animation">Start Animation</button>
-  <div id="divAnimate" style="background:#98bf21;height:100px;width:100px;"></div>
+  <h1>Rate the images</h1>
+
+  <input type="text" id="myInput">
+  <button onclick="saveData()">Save</button>
+
+  <div id="savedData"></div>
+  <button onclick="retrieveData()">Retrieve</button>
+
   </main>
   </body>
 
@@ -61,6 +68,6 @@
   <footer class="bg-dark text-center text-light py-3">
     <p>&copy; 2023 Moberly. All rights reserved.</p>
   </footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="localScript.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </html>
