--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="api.html">Api</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login">Login</a>
+            <a class="nav-link disabled" href="login">Login</a>
           </li>
         </ul>
       </div>
