--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
         <p id="clock"></p>
         <h1>Dont try this at home</h1>
     </div>
-    <div class="flex-container  my-1">
+    <div class="flex-container  my-2">
     <h2> The Cat Café Atmosphere: </h2> 
     </div>
     <div class="flex-container  my-1"><p>  
-      Walking into a cat café is like entering a tranquil oasis, carefully designed to create a serene and comfortable environment for both cats and visitors. Soft music plays in the background as you sink into a cozy chair, sipping on your favorite latte or tea. The scent of freshly brewed coffee mingles with the gentle purring of contented cats, instantly putting you at ease.
+      Walking into a cat café is like entering a tranquil oasis, 
+      carefully designed to create a serene and comfortable environment for both cats and visitors. 
+      Soft music plays in the background as you sink into a cozy chair, sipping on your favorite latte or tea. 
+      The scent of freshly brewed coffee mingles with the gentle purring of contented cats, instantly putting you at ease.
     </p>
     </div>
     </div>
