--- a/logoPage.html
+++ b/logoPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - WiXi</title>
+    <title>Logo - WiXi</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -39,13 +39,11 @@
       </div>
     </div>
   </nav>
+<main>
+    <img src="logoCat.png" alt="Logo" class="responsive-image py-2"> 
   
- 
+</main>
 </body>
-  
-  <button id="animation">Start Animation</button>
-  <div id="divAnimate" style="background:#98bf21;height:100px;width:100px;"></div>
-  </div>
   <footer class="bg-dark text-center text-light py-3">
     <p>&copy; 2023 Moberly. All rights reserved.</p>
   </footer>
